# ai-threat-model

./: .dockerignore  .gitignore  API_SETUP.md  DOCKER_IMPROVEMENTS.md  DOCKER_RUN.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  GITHUB_SETUP.md  LICENSE  MR_DATA.md  QUICKSTART.md  README.md  SETUP.md  api_server.py  check_docker.sh  docker-compose.dev.yml  docker-compose.simple.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup_dev.sh
docs/: DIGITAL_MIND_REFLECTIONS.md  PLOT4AI.md  THREAT_DESIGNER_EVALUATION.md
examples/: README.md  agentic-system.tm.json  financial-agentic-system.tm.json  healthcare-agentic-system.tm.json  multi-agent-privacy-system.tm.json  multi-agent-system.tm.json  privacy-focused-llm-app.tm.json  simple-llm-app.tm.json
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/pages/: ThreatModelEditor.tsx  ThreatModelList.tsx  VisionAnalysis.tsx
patterns/: PATTERNS_STRATEGY.md  README.md
patterns/ai/agentic-top10/: AGENTIC01.json  AGENTIC02.json  AGENTIC03.json  AGENTIC04.json  AGENTIC05.json  AGENTIC06.json  AGENTIC07.json  AGENTIC08.json  AGENTIC09.json  AGENTIC10.json  CHANGELOG.md  README.md
patterns/ai/llm-top10/: LLM01.json  LLM02.json  LLM03.json  LLM04.json  LLM05.json  LLM06.json  LLM07.json  LLM08.json  LLM09.json  LLM10.json
patterns/ai/plot4ai/: README.md
schemas/: threat-model-schema.json
src/ai_threat_model/api/: converters.py  main.py  models.py  vision.py
src/ai_threat_model/api/routes/: patterns.py  threat_models.py  vision.py
src/ai_threat_model/cli/: display.py  main.py  reporting.py
src/ai_threat_model/core/: models.py  plot4ai_models.py
src/ai_threat_model/plugins/: __init__.py  base_plugin.py  pattern_registry.py  registry.py
src/ai_threat_model/plugins/ai/: __init__.py  agentic_plugin.py  llm_plugin.py  multi_agent_plugin.py  pattern_builders.py  plot4ai_plugin.py  threat_detection.py
src/ai_threat_model/utils/: __init__.py  logging.py  plot4ai_converter.py  plot4ai_loader.py
tests/: README.md  conftest.py
tests/test_cli/: test_main.py  test_view.py
tests/test_core/: test_models.py
tests/test_integration/: __init__.py  test_examples.py
tests/test_plugins/: test_agentic_plugin.py  test_llm_plugin.py  test_multi_agent_plugin.py  test_pattern_registry.py  test_registry.py  test_threat_detection.py
tests/test_utils/: test_logging.py
